CCD-6626 pageData null values updates are now updated to CaseDetails